Bug 259334 - [GTK][WPE] Device scale factor not applied if changed at runtime
Summary: [GTK][WPE] Device scale factor not applied if changed at runtime
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Carlos Garcia Campos
URL:
Keywords: Gtk
Depends on:
Blocks:
 
Reported: 2023-07-19 01:54 PDT by Carlos Garcia Campos
Modified: 2023-07-19 02:53 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2023-07-19 01:54:43 PDT
The problem is that the viewport size is the scaled size based on the device scale factor, but when only scale factor changes, we don't update the viewport size.
Comment 1 Carlos Garcia Campos 2023-07-19 01:57:22 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15925
Comment 2 EWS 2023-07-19 02:53:52 PDT
Committed 266157@main (690223fa5be1): <https://commits.webkit.org/266157@main>

Reviewed commits have been landed. Closing PR #15925 and removing active labels.