[GTK][WPE] Device scale factor not applied if changed at runtime https://bugs.webkit.org/show_bug.cgi?id=259334

Reviewed by Alejandro G. Castro.

The problem is that the viewport size is the scaled size based on the
device scale factor, but when only scale factor changes, we don't update
the viewport size.

* Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::setScaleFactor): Deleted.
* Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::deviceOrPageScaleFactorChanged): Call ThreadedCompositor::setViewportSize().

Canonical link: https://commits.webkit.org/266157@main